update content and data

--- a/data/cities/augusta/goodwill.yml
+++ b/data/cities/augusta/goodwill.yml
@@ -7,5 +7,5 @@ city: Augusta
 street: Senator way
 housenumber: "5"
 phone: +1-207-623-1774
-opening_hours: ""
+opening_hours: 09:00-18:00
 website: https://goodwillnne.org/
