--- a/data/cities/brunswick/gulf-of-maine-books.yml
+++ b/data/cities/brunswick/gulf-of-maine-books.yml
@@ -7,5 +7,5 @@ city: Brunswick
 street: Maine Street
 housenumber: "134"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 10:00-17:00
 website: ""
