--- a/data/cities/brunswick/woods-waters-gear-exchange.yml
+++ b/data/cities/brunswick/woods-waters-gear-exchange.yml
@@ -7,5 +7,5 @@ city: Brunswick
 street: Pleasant Street
 housenumber: "12"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Fr 10:30-17:30; Sa 10:30-17:00
 website: ""
