update content and data

--- a/data/cities/bangor/maine-commercial-hydroponic-equipment-supplier-by-dutch-direct.yml
+++ b/data/cities/bangor/maine-commercial-hydroponic-equipment-supplier-by-dutch-direct.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: Thatcher Street
 housenumber: "216"
-phone: +1 (207) 600-2885
+phone: +1 207-600-2885
 opening_hours: Mo-Fr 09:00-17:00
 website: https://www.dutchdirect.us/maine-commercial-hydroponics-equipment-supplier
