--- a/data/cities/bar-harbor/hidden-barn-books.yml
+++ b/data/cities/bar-harbor/hidden-barn-books.yml
@@ -6,6 +6,6 @@ postcode: "04609"
 city: Bar Harbor
 street: Kennebec Place
 housenumber: "31"
-phone: "12072880545"
+phone: +1 207-288-0545
 opening_hours: Mo-Sa 10:00-16:00
 website: https://hiddenbarnbooks.com/
