--- a/data/cities/bethel/great-american-ski-renting-company.yml
+++ b/data/cities/bethel/great-american-ski-renting-company.yml
@@ -6,6 +6,6 @@ postcode: "04217"
 city: Bethel
 street: Sunday River Road
 housenumber: "101"
-phone: 207-824-3092
+phone: +1 207-824-3092
 opening_hours: ""
 website: https://www.skidemo.com
