--- a/data/cities/bethel/sun-valley-self-storage.yml
+++ b/data/cities/bethel/sun-valley-self-storage.yml
@@ -6,6 +6,6 @@ postcode: "04217"
 city: Bethel
 street: Sunday River Road
 housenumber: "129"
-phone: 207-824-0731
+phone: +1 207-824-0731
 opening_hours: ""
 website: http://www.sunvalleystorageme.com
