--- a/data/cities/biddeford/devoe-color-and-design-center.yml
+++ b/data/cities/biddeford/devoe-color-and-design-center.yml
@@ -6,6 +6,6 @@ postcode: "04005"
 city: Biddeford
 street: Elm Street
 housenumber: "561"
-phone: (207) 284-6216
+phone: +1 207-284-6216
 opening_hours: ""
 website: https://www.devoeflooringanddesign.com/
