--- a/data/cities/biddeford/sea-star-market.yml
+++ b/data/cities/biddeford/sea-star-market.yml
@@ -6,6 +6,6 @@ postcode: "04005"
 city: Biddeford
 street: Pool Street
 housenumber: "584"
-phone: +1 (207) 286-3022
+phone: +1 207-286-3022
 opening_hours: Mo-Su 06:00-20:00
 website: ""
