--- a/data/cities/blue-hill/blue-hill-wine-shop.yml
+++ b/data/cities/blue-hill/blue-hill-wine-shop.yml
@@ -6,6 +6,6 @@ postcode: "04614"
 city: Blue Hill
 street: Main Street
 housenumber: "138"
-phone: "2073742161"
+phone: +1 207-374-2161
 opening_hours: ""
 website: https://www.bluehillwineshop.com/
