--- a/data/cities/brooklin/brooklin-general-store.yml
+++ b/data/cities/brooklin/brooklin-general-store.yml
@@ -6,6 +6,6 @@ postcode: "04616"
 city: Brooklin
 street: Reach Road
 housenumber: "4"
-phone: "2073598359"
+phone: +1 207-359-8359
 opening_hours: ""
 website: http://brooklingeneralstore.com/
