--- a/data/cities/brooklin/leaf-and-anna.yml
+++ b/data/cities/brooklin/leaf-and-anna.yml
@@ -6,6 +6,6 @@ postcode: "04616"
 city: Brooklin
 street: Reach Road
 housenumber: "12"
-phone: "2073595030"
+phone: +1 207-359-5030
 opening_hours: ""
 website: https://leafandanna.com/
