--- a/data/cities/eliot/organic-goods.yml
+++ b/data/cities/eliot/organic-goods.yml
@@ -6,6 +6,6 @@ postcode: "03903"
 city: Eliot
 street: American Way
 housenumber: "12"
-phone: 207-703-0269
+phone: +1 207-703-0269
 opening_hours: Mo-Su 10:00-20:00
 website: ""
