--- a/data/cities/fort-kent/northern-reach-maple.yml
+++ b/data/cities/fort-kent/northern-reach-maple.yml
@@ -6,6 +6,6 @@ postcode: "04743"
 city: Fort Kent
 street: Franklin School Road
 housenumber: "458"
-phone: "12076904400"
+phone: +1 207-690-4400
 opening_hours: Mo-Fr 08:30-15:30, Sa 11:00-16:00
 website: ""
