--- a/data/cities/fryeburg/studio-22.yml
+++ b/data/cities/fryeburg/studio-22.yml
@@ -6,6 +6,6 @@ postcode: "04037"
 city: Fryeburg
 street: Portland Street
 housenumber: "22"
-phone: 207-256-3122
+phone: +1 207-256-3122
 opening_hours: Th-Sa 11:00-17:00; We "by chance"
 website: ""
