--- a/data/cities/gorham/207-motors.yml
+++ b/data/cities/gorham/207-motors.yml
@@ -6,6 +6,6 @@ postcode: "04038"
 city: Gorham
 street: Ossipee Trail
 housenumber: "397"
-phone: (207) 400-4473
+phone: +1 207-400-4473
 opening_hours: ""
 website: https://www.207motors.com/
