--- a/data/cities/gorham/redeemer-lutheran-church.yml
+++ b/data/cities/gorham/redeemer-lutheran-church.yml
@@ -6,6 +6,6 @@ postcode: "04038"
 city: Gorham
 street: Main Street
 housenumber: "410"
-phone: "2078397100"
+phone: +1 207-839-7100
 opening_hours: ""
 website: https://www.redeemermaine.org/home
