--- a/data/cities/grand-lake-stream/pine-tree-store.yml
+++ b/data/cities/grand-lake-stream/pine-tree-store.yml
@@ -6,6 +6,6 @@ postcode: "04468"
 city: Grand Lake Stream
 street: Water Street
 housenumber: "7"
-phone: "2077965027"
+phone: +1 207-796-5027
 opening_hours: ""
 website: https://pinetreestore.com/
