--- a/data/cities/gray/dollar-tree.yml
+++ b/data/cities/gray/dollar-tree.yml
@@ -6,6 +6,6 @@ postcode: "04039"
 city: Gray
 street: Portland Road
 housenumber: "20"
-phone: "2076570002"
+phone: +1 207-657-0002
 opening_hours: Mo-Su 09:00-21:00
 website: https://www.dollartree.com/locations/me/gray/5086/
