--- a/data/cities/gray/karens-flower-emporium.yml
+++ b/data/cities/gray/karens-flower-emporium.yml
@@ -6,6 +6,6 @@ postcode: "04039"
 city: Gray
 street: Portland Road
 housenumber: "3"
-phone: "2076575211"
+phone: +1 207-657-5211
 opening_hours: Mo-Fr 09:00-17:00
 website: ""
