--- a/data/cities/gray/portland-safe.yml
+++ b/data/cities/gray/portland-safe.yml
@@ -6,6 +6,6 @@ postcode: "04039"
 city: Gray
 street: Portland Road
 housenumber: "235"
-phone: "12073584000"
+phone: +1 207-358-4000
 opening_hours: ""
 website: ""
