--- a/data/cities/gray/special-effects-salon-and-day-spa.yml
+++ b/data/cities/gray/special-effects-salon-and-day-spa.yml
@@ -6,6 +6,6 @@ postcode: "04039"
 city: Gray
 street: Center Road
 housenumber: "5"
-phone: "12076572121"
+phone: +1 207-657-2121
 opening_hours: ""
 website: ""
