--- a/data/cities/hampden/hampden-floral.yml
+++ b/data/cities/hampden/hampden-floral.yml
@@ -6,6 +6,6 @@ postcode: "04444"
 city: Hampden
 street: Main Road North
 housenumber: "60"
-phone: +1 (207) 862-3018
+phone: +1 207-862-3018
 opening_hours: Mo-Fr 09:00-17:00
 website: https://hampdenflorist.com/
