--- a/data/cities/hampden/the-keeping-room.yml
+++ b/data/cities/hampden/the-keeping-room.yml
@@ -6,6 +6,6 @@ postcode: "04444"
 city: Hampden
 street: Main Road North
 housenumber: "56"
-phone: +1 (207) 862-3181
+phone: +1 207-862-3181
 opening_hours: ""
 website: ""
