--- a/data/cities/kennebunk/moon-and-back.yml
+++ b/data/cities/kennebunk/moon-and-back.yml
@@ -6,6 +6,6 @@ postcode: "04043"
 city: Kennebunk
 street: Portland Road
 housenumber: "45"
-phone: 207-802-0720
+phone: +1 207-802-0720
 opening_hours: Mo-Su 09:00-17:00
 website: https://moonandback.com/
