--- a/data/cities/kittery/autoworks.yml
+++ b/data/cities/kittery/autoworks.yml
@@ -6,6 +6,6 @@ postcode: "03904"
 city: Kittery
 street: Government Street
 housenumber: "107"
-phone: 207-606-3107
+phone: +1 207-606-3107
 opening_hours: ""
 website: https://auto-works.com/
