--- a/data/cities/kittery/bolzs-service.yml
+++ b/data/cities/kittery/bolzs-service.yml
@@ -6,6 +6,6 @@ postcode: "03904"
 city: Kittery
 street: State Road
 housenumber: "55"
-phone: "12074393332"
+phone: +1 207-439-3332
 opening_hours: ""
 website: ""
