--- a/data/cities/kittery/byrne-and-carlson-chocolatier.yml
+++ b/data/cities/kittery/byrne-and-carlson-chocolatier.yml
@@ -6,6 +6,6 @@ postcode: "03904"
 city: Kittery
 street: State Road
 housenumber: "60"
-phone: "12074390096"
+phone: +1 207-439-0096
 opening_hours: ""
 website: https://www.byrneandcarlson.com/
