--- a/data/cities/kittery/js-pelkey-funeral-home.yml
+++ b/data/cities/kittery/js-pelkey-funeral-home.yml
@@ -6,6 +6,6 @@ postcode: "03904"
 city: Kittery
 street: Old Post Road
 housenumber: "125"
-phone: "12074394900"
+phone: +1 207-439-4900
 opening_hours: ""
 website: https://www.jspelkeyfuneralhome.com/
