--- a/data/cities/kittery/puffers-automotive.yml
+++ b/data/cities/kittery/puffers-automotive.yml
@@ -6,6 +6,6 @@ postcode: "03904"
 city: Kittery
 street: Route 1
 housenumber: "421"
-phone: "12077032207"
+phone: +1 207-703-2207
 opening_hours: ""
 website: https://puffers-automotive.edan.io/
