--- a/data/cities/litchfield/dollar-general.yml
+++ b/data/cities/litchfield/dollar-general.yml
@@ -6,6 +6,6 @@ postcode: "04350"
 city: Litchfield
 street: Hallowell Rd
 housenumber: "1905"
-phone: 207 241 5101
+phone: +1 207-241-5101
 opening_hours: ""
 website: https://www.dollargeneral.com/store-directory/me/litchfield/15760
