--- a/data/cities/lubec/carlton-e-corey-garage.yml
+++ b/data/cities/lubec/carlton-e-corey-garage.yml
@@ -6,6 +6,6 @@ postcode: "04652"
 city: Lubec
 street: County Road
 housenumber: "786"
-phone: (207) 733-4361
+phone: +1 207-733-4361
 opening_hours: ""
 website: ""
