--- a/data/cities/mount-desert/otter-creek-market.yml
+++ b/data/cities/mount-desert/otter-creek-market.yml
@@ -6,6 +6,6 @@ postcode: "04660"
 city: Mount Desert
 street: Otter Creek Drive
 housenumber: "47"
-phone: +1 (207) 288-5151; +1 (800) 845-5852
+phone: +1 207-288-5151; +1 800-845-5852
 opening_hours: 07:00-19:00
 website: https://www.ottercreekinnmaine.com/market.html
