--- a/data/cities/port-clyde/port-clyde-kayaks.yml
+++ b/data/cities/port-clyde/port-clyde-kayaks.yml
@@ -6,6 +6,6 @@ postcode: "04855"
 city: Port Clyde
 street: Factory Road
 housenumber: "3"
-phone: (207) 372-8100
+phone: +1 207-372-8100
 opening_hours: ""
 website: https://portclydekayaks.com/contact/
