--- a/data/cities/portland/free-range-fish-and-lobster.yml
+++ b/data/cities/portland/free-range-fish-and-lobster.yml
@@ -6,6 +6,6 @@ postcode: "04101"
 city: Portland
 street: Commercial Street
 housenumber: "450"
-phone: (207) 774-8469
+phone: +1 207-774-8469
 opening_hours: Mo-Su 09:00-18:00
 website: http://freerangefish.com/
