--- a/data/cities/rangeley/oquossoc-grocery.yml
+++ b/data/cities/rangeley/oquossoc-grocery.yml
@@ -6,6 +6,6 @@ postcode: "04970"
 city: Rangeley
 street: Carry Road
 housenumber: "75"
-phone: +1 (207) 864-3662
+phone: +1 207-864-3662
 opening_hours: Mo-Su 05:00-19:00
 website: https://www.oquossocgrocery.com/
