--- a/data/cities/sherman/sherman-thriftway.yml
+++ b/data/cities/sherman/sherman-thriftway.yml
@@ -6,6 +6,6 @@ postcode: "04776"
 city: Sherman
 street: Woodbridge Corner Road
 housenumber: "3"
-phone: 207-365-4538
+phone: +1 207-365-4538
 opening_hours: ""
 website: https://www.shermanthriftway.com/
