--- a/data/cities/south-portland/autozone.yml
+++ b/data/cities/south-portland/autozone.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: Lincoln Street
 housenumber: "436"
-phone: (207)-767-4714
+phone: +1 207-767-4714
 opening_hours: ""
 website: https://www.autozone.com/locations/me/south-portland/436-lincoln-street-ext.html
