--- a/data/cities/trescott-township/county-road-cuts.yml
+++ b/data/cities/trescott-township/county-road-cuts.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Trescott Township
 street: County Road
 housenumber: "1169"
-phone: (207) 733-2255
+phone: +1 207-733-2255
 opening_hours: ""
 website: ""
