--- a/data/cities/waterville/campbells-hardware-agway.yml
+++ b/data/cities/waterville/campbells-hardware-agway.yml
@@ -6,6 +6,6 @@ postcode: "04901"
 city: Waterville
 street: Garland Road
 housenumber: "30"
-phone: 207-872-7039
+phone: +1 207-872-7039
 opening_hours: Mo-Su 08:00-18:00
 website: ""
