--- a/data/cities/westbrook/pratt-abbott.yml
+++ b/data/cities/westbrook/pratt-abbott.yml
@@ -6,6 +6,6 @@ postcode: "04092"
 city: Westbrook
 street: Eisenhower Drive
 housenumber: "2"
-phone: +1 (207) 854-5881
+phone: +1 207-854-5881
 opening_hours: Mo-Su 07:00-19:00
 website: https://prattabbott.com/
