--- a/data/cities/augusta/dollar-tree.yml
+++ b/data/cities/augusta/dollar-tree.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: Shaw's Plaza
 housenumber: ""
-phone: +1 (207) 480-6010
+phone: +1 207-480-6010
 opening_hours: Mo-Sa 08:00-22:00; Su 09:00-20:00
 website: https://www.dollartree.com/locations/me/augusta/2490/
