--- a/data/cities/augusta/shaws.yml
+++ b/data/cities/augusta/shaws.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: Western Avenue
 housenumber: "150"
-phone: (207) 623-4520
+phone: +1 207-623-4520
 opening_hours: Su-Sa 07:00-22:00
 website: https://local.shaws.com/me/augusta/150-western-ave.html
