--- a/data/cities/belfast/bennetts-gems-and-jewelry.yml
+++ b/data/cities/belfast/bennetts-gems-and-jewelry.yml
@@ -6,6 +6,6 @@ postcode: "04915"
 city: Belfast
 street: Searsport Avenue
 housenumber: "45"
-phone: 207-338-5530
+phone: +1 207-338-5530
 opening_hours: Mo-Su 10:00-17:00
 website: https://bennettsgemsjewelry.net
