--- a/data/cities/belfast/grasshopper-shop.yml
+++ b/data/cities/belfast/grasshopper-shop.yml
@@ -6,6 +6,6 @@ postcode: "04915"
 city: Belfast
 street: High Street
 housenumber: "105"
-phone: 1-207-218-1366
+phone: +1 207-218-1366
 opening_hours: Mo-Fr 09:00-18:00
 website: https://grasshoppershop.com/
