--- a/data/cities/blue-hill/new-winsord-hannaford.yml
+++ b/data/cities/blue-hill/new-winsord-hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04614"
 city: Blue Hill
 street: South Street
 housenumber: "15"
-phone: "2073745137"
+phone: +1 207-374-5137
 opening_hours: ""
 website: https://stores.hannaford.com/ny/new-windsor/8331
