--- a/data/cities/brunswick/morning-glory-natural-foods.yml
+++ b/data/cities/brunswick/morning-glory-natural-foods.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "60"
-phone: +1 (207) 729-0546
+phone: +1 207-729-0546
 opening_hours: Mo-Sa 09:00-19:00; Su 10:00-17:00
 website: https://www.moglonf.com/
