--- a/data/cities/brunswick/petsmart.yml
+++ b/data/cities/brunswick/petsmart.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Bath Road
 housenumber: "147"
-phone: (207) 844-6122
+phone: +1 207-844-6122
 opening_hours: Mo-Sa 9:00am-8:00pm Su 10:00am-7:00pm
 website: ""
