--- a/data/cities/brunswick/the-outer-limits.yml
+++ b/data/cities/brunswick/the-outer-limits.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Pleasant Street
 housenumber: "11"
-phone: +1 (207) 508-1155
+phone: +1 207-508-1155
 opening_hours: Mo-Th 11:00-18:00; Fr-Sa 11:00-20:00; Su off
 website: https://outerlimitsstudios.com/visit-us/
