--- a/data/cities/china-village/circle-k.yml
+++ b/data/cities/china-village/circle-k.yml
@@ -6,6 +6,6 @@ postcode: "04926"
 city: China Village
 street: Lakeview Drive
 housenumber: "1390"
-phone: (207) 968-2042
+phone: +1 207-968-2042
 opening_hours: 24/7
 website: https://www.circlek.com/store-locator/US/china/1390-lakeview-dr/M7121
