--- a/data/cities/damariscotta/riverside-butcher-company.yml
+++ b/data/cities/damariscotta/riverside-butcher-company.yml
@@ -6,6 +6,6 @@ postcode: "04553"
 city: Damariscotta
 street: Main Street
 housenumber: "49"
-phone: 207-563-6498
+phone: +1 207-563-6498
 opening_hours: Tu-Su 10:00-17:00
 website: https://riversidebutcher.com/
