--- a/data/cities/damariscotta/s-fernalds-country-store.yml
+++ b/data/cities/damariscotta/s-fernalds-country-store.yml
@@ -6,6 +6,6 @@ postcode: "04543"
 city: Damariscotta
 street: Main Street
 housenumber: "50"
-phone: (207) 563-8484
+phone: +1 207-563-8484
 opening_hours: Tu-Sa 08:00-16:00
 website: https://www.fernaldscountrystore.com/
