--- a/data/cities/damariscotta/simmons-seafood-market.yml
+++ b/data/cities/damariscotta/simmons-seafood-market.yml
@@ -6,6 +6,6 @@ postcode: "04543"
 city: Damariscotta
 street: Main Street
 housenumber: "49"
-phone: 207-563-8800
+phone: +1 207-563-8800
 opening_hours: Mo-Sa 10:00-18:00; Su 10:00-17:00
 website: https://www.simmonsseafoodmarket.com/
