--- a/data/cities/freeport/island-treasure-toys.yml
+++ b/data/cities/freeport/island-treasure-toys.yml
@@ -6,6 +6,6 @@ postcode: "04032"
 city: Freeport
 street: Main Street
 housenumber: "55"
-phone: 1(207)-865-7007
+phone: +1 207-865-7007
 opening_hours: ""
 website: https://islandtreasuretoys.com/
