--- a/data/cities/gray/us-and-company-computers.yml
+++ b/data/cities/gray/us-and-company-computers.yml
@@ -6,6 +6,6 @@ postcode: "04039"
 city: Gray
 street: Main Street
 housenumber: "23"
-phone: 1 207 657 4102
+phone: +1 207-657-4102
 opening_hours: ""
 website: ""
