--- a/data/cities/greenwood/paaso-racing.yml
+++ b/data/cities/greenwood/paaso-racing.yml
@@ -6,6 +6,6 @@ postcode: "04255"
 city: Greenwood
 street: North Main Street
 housenumber: "303"
-phone: 207-357-1979
+phone: +1 207-357-1979
 opening_hours: ""
 website: https://www.paasoracing.com/
