--- a/data/cities/kittery/new-england-fishmongers.yml
+++ b/data/cities/kittery/new-england-fishmongers.yml
@@ -6,6 +6,6 @@ postcode: "03904"
 city: Kittery
 street: State Road
 housenumber: "57"
-phone: "12079949219"
+phone: +1 207-994-9219
 opening_hours: ""
 website: https://www.newenglandfishmongers.com/
