--- a/data/cities/kittery/terra-cotta-pasta-co.yml
+++ b/data/cities/kittery/terra-cotta-pasta-co.yml
@@ -6,6 +6,6 @@ postcode: "03904"
 city: Kittery
 street: State Road
 housenumber: "54"
-phone: "12074753025"
+phone: +1 207-475-3025
 opening_hours: ""
 website: http://terracottapastacompany.com/
