--- a/data/cities/lisbon-falls/walgreens.yml
+++ b/data/cities/lisbon-falls/walgreens.yml
@@ -6,6 +6,6 @@ postcode: "04252"
 city: Lisbon Falls
 street: Lisbon Street
 housenumber: "575"
-phone: 207-353-4843
+phone: +1 207-353-4843
 opening_hours: ""
 website: https://www.walgreens.com/locator/walgreens-575+lisbon+st-lisbon+falls-me-04252/id=19908
