--- a/data/cities/litchfield/lichfield-country-store.yml
+++ b/data/cities/litchfield/lichfield-country-store.yml
@@ -6,6 +6,6 @@ postcode: "04350"
 city: Litchfield
 street: Hallowell Rd
 housenumber: "1908"
-phone: 207 268 9910
+phone: +1 207-268-9910
 opening_hours: ""
 website: ""
