--- a/data/cities/monmouth/monmoth-kwik-shop.yml
+++ b/data/cities/monmouth/monmoth-kwik-shop.yml
@@ -6,6 +6,6 @@ postcode: "04259"
 city: Monmouth
 street: Academy St
 housenumber: "4"
-phone: 207 933 3334
+phone: +1 207-933-3334
 opening_hours: ""
 website: ""
