--- a/data/cities/newport/grams-five-and-dime-cannabis-co.yml
+++ b/data/cities/newport/grams-five-and-dime-cannabis-co.yml
@@ -6,6 +6,6 @@ postcode: "04953"
 city: Newport
 street: Moosehead Trail
 housenumber: "36"
-phone: +1 (207) 999-5000
+phone: +1 207-999-5000
 opening_hours: Mo-Su 09:00-21:00
 website: ""
