--- a/data/cities/north-berwick/the-studio.yml
+++ b/data/cities/north-berwick/the-studio.yml
@@ -6,6 +6,6 @@ postcode: "03906"
 city: North Berwick
 street: Main Street
 housenumber: "15"
-phone: 1-207-957-4080
+phone: +1 207-957-4080
 opening_hours: ""
 website: ""
