--- a/data/cities/oakland/oakland-motor-company.yml
+++ b/data/cities/oakland/oakland-motor-company.yml
@@ -6,6 +6,6 @@ postcode: "04963"
 city: Oakland
 street: Old Waterville Road
 housenumber: "17"
-phone: (207) 716-1564
+phone: +1 207-716-1564
 opening_hours: Mo-Fr 08:30-17:00; Sa 09:00-15:00
 website: https://www.oaklandmotorco.com/
