--- a/data/cities/portland/south-street-linen.yml
+++ b/data/cities/portland/south-street-linen.yml
@@ -6,6 +6,6 @@ postcode: "04101"
 city: Portland
 street: South Street
 housenumber: "5"
-phone: (774) 234-7678
+phone: +1 774-234-7678
 opening_hours: ""
 website: https://southstreetlinen.com/
