--- a/data/cities/rockland/maine-sport-outfitters.yml
+++ b/data/cities/rockland/maine-sport-outfitters.yml
@@ -6,6 +6,6 @@ postcode: "04841"
 city: Rockland
 street: Main Street
 housenumber: "279"
-phone: +1 (207) 593-8017
+phone: +1 207-593-8017
 opening_hours: Mo-Sa 09:00-18:00, Su 10:00-17:00
 website: https://mainesport.com/
