--- a/data/cities/saco/maine-bike-works.yml
+++ b/data/cities/saco/maine-bike-works.yml
@@ -6,6 +6,6 @@ postcode: "04072"
 city: Saco
 street: Portland Road
 housenumber: "885"
-phone: (207) 590-8903
+phone: +1 207-590-8903
 opening_hours: ""
 website: http://www.mainebikeworks.com/
