--- a/data/cities/waterville/walgreens.yml
+++ b/data/cities/waterville/walgreens.yml
@@ -6,6 +6,6 @@ postcode: "04901"
 city: Waterville
 street: China Road
 housenumber: "36"
-phone: 207-872-2727
+phone: +1 207-872-2727
 opening_hours: ""
 website: https://www.walgreens.com/locator/walgreens-36+china+road-winslow-me-04901/id=19674
