--- a/data/cities/westfield/finishing-touch-auto-sales.yml
+++ b/data/cities/westfield/finishing-touch-auto-sales.yml
@@ -6,6 +6,6 @@ postcode: "04787"
 city: Westfield
 street: Houlton Road
 housenumber: "932"
-phone: "2074251013"
+phone: +1 207-425-1013
 opening_hours: Mo-Fr 08:00-16:00
 website: ""
