update content and data

--- a/data/cities/hallowell/belle-boulangerie.yml
+++ b/data/cities/hallowell/belle-boulangerie.yml
@@ -6,6 +6,6 @@ postcode: "04347"
 city: Hallowell
 street: Water Street
 housenumber: "156"
-phone: +1-207-623-9743
-opening_hours: ""
+phone: ""
+opening_hours: We-Fr 08:00-14:00; Sa 09:00-12:30
 website: ""
