--- a/data/cities/skowhegan/river-roads-artisans-gallery.yml
+++ b/data/cities/skowhegan/river-roads-artisans-gallery.yml
@@ -8,4 +8,4 @@ street: Water Street
 housenumber: "75"
 phone: +1-207-612-1017
 opening_hours: ""
-website: http://www.riverroadsgallery.com/
+website: https://www.riverroadsgallery.com/
