--- a/data/cities/hallowell/slates-bakery.yml
+++ b/data/cities/hallowell/slates-bakery.yml
@@ -7,5 +7,5 @@ city: Hallowell
 street: Water Street
 housenumber: "163"
 phone: +1-207-622-4104
-opening_hours: ""
+opening_hours: Mo-Sa 07:30-15:30; Su 09:00-15:00
 website: https://www.slatesrestaurant.com/
