--- a/data/cities/skowhegan/key-appliance.yml
+++ b/data/cities/skowhegan/key-appliance.yml
@@ -8,4 +8,4 @@ street: Water Street
 housenumber: "101"
 phone: +1-207-474-8112
 opening_hours: ""
-website: http://www.keyappliance.com/
+website: https://www.keyappliance.com/
