--- a/data/cities/skowhegan/label-shopper.yml
+++ b/data/cities/skowhegan/label-shopper.yml
@@ -8,4 +8,4 @@ street: Madison Avenue
 housenumber: "381"
 phone: "+12074743633"
 opening_hours: ""
-website: http://www.labelshopper.com/
+website: https://www.labelshopper.com/
