update content and data

--- a/data/cities/brunswick/primo-glass.yml
+++ b/data/cities/brunswick/primo-glass.yml
@@ -1,11 +1,11 @@
-id: 432403687
+id: 3348994737
 type: node
-latitude: 43.91252
-longitude: -69.98238
+latitude: 43.91256
+longitude: -69.97887
 postcode: "04011"
 city: Brunswick
 street: Pleasant Street
-housenumber: "127"
-phone: ""
+housenumber: "103"
+phone: +1-207-798-3989
 opening_hours: ""
 website: ""
