--- a/data/cities/freeport/bridgham-and-cook.yml
+++ b/data/cities/freeport/bridgham-and-cook.yml
@@ -1,11 +1,11 @@
 id: 2713428491
 type: node
 latitude: 43.85852
-longitude: -70.10246
+longitude: -70.10249
 postcode: "04032"
 city: Freeport
 street: Main Street
 housenumber: "123"
-phone: ""
-opening_hours: ""
+phone: +1-207-865-1040
+opening_hours: Mo-Su 10:00-17:00
 website: https://britishgoods.com/
