--- a/data/cities/freeport/double-barrel.yml
+++ b/data/cities/freeport/double-barrel.yml
@@ -1,11 +1,11 @@
 id: 2713432149
 type: node
-latitude: 43.85822
-longitude: -70.10262
+latitude: 43.85824
+longitude: -70.10265
 postcode: "04032"
 city: Freeport
 street: Main Street
 housenumber: "115"
-phone: +1-207-869-4025
+phone: +1-207-865-4677
 opening_hours: ""
-website: http://www.brahmsmount.com
+website: https://doublebarrelfreeport.square.site/
