--- a/data/cities/freeport/leapin-lizards.yml
+++ b/data/cities/freeport/leapin-lizards.yml
@@ -1,11 +1,11 @@
 id: 2699325790
 type: node
 latitude: 43.8586
-longitude: -70.10265
+longitude: -70.10278
 postcode: "04032"
 city: Freeport
 street: Main Street
 housenumber: "123"
 phone: +1-207-865-0900
-opening_hours: Mo-Sa 10:00-18:00; Su 11:00-17:00
+opening_hours: We-Sa 10:00-17:30; Su 11:00-16:00; Mo-Tu off
 website: https://www.leapinlizards.biz/
