--- a/data/cities/phillips/edmunds-market.yml
+++ b/data/cities/phillips/edmunds-market.yml
@@ -1,11 +1,11 @@
-id: 4811565081
+id: 1449905841
 type: node
-latitude: 44.81913
-longitude: -70.34323
+latitude: 44.81895
+longitude: -70.3433
 postcode: "04966"
 city: Phillips
 street: Rangeley Road
 housenumber: "1185"
-phone: ""
+phone: "+12076393721"
 opening_hours: ""
 website: ""
