--- a/data/cities/freeport/l-l-bean-bike-boat-and-ski-store.yml
+++ b/data/cities/freeport/l-l-bean-bike-boat-and-ski-store.yml
@@ -1,11 +1,11 @@
 id: 142995166
 type: node
-latitude: 43.857
-longitude: -70.104
+latitude: 43.85699
+longitude: -70.10394
 postcode: "04032"
 city: Freeport
 street: Main Street
 housenumber: "57"
 phone: ""
-opening_hours: 24/7
+opening_hours: Mo-Su 07:00-22:00
 website: ""
