--- a/data/cities/freeport/l-l-bean-home-store.yml
+++ b/data/cities/freeport/l-l-bean-home-store.yml
@@ -6,6 +6,6 @@ postcode: "04032"
 city: Freeport
 street: Nathan Nye Street
 housenumber: "12"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-877-755-2326
+opening_hours: Mo-Su 07:00-22:00
+website: https://www.llbean.com/llb/shop/1000001708
