update content and data

--- a/data/cities/bangor/american-releaf.yml
+++ b/data/cities/bangor/american-releaf.yml
@@ -1,11 +1,11 @@
 id: 1060190410
 type: node
-latitude: 44.84439
+latitude: 44.84459
 longitude: -68.73972
 postcode: "04401"
 city: Bangor
 street: Longview Drive
 housenumber: "185"
-phone: ""
+phone: +1 207-992-2694
 opening_hours: ""
-website: ""
+website: https://americanreleaf.com/
