update content and data

--- a/data/cities/scarborough/sullivan-tire.yml
+++ b/data/cities/scarborough/sullivan-tire.yml
@@ -6,6 +6,6 @@ postcode: "04074"
 city: Scarborough
 street: Route 1
 housenumber: "391"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-885-4500
+opening_hours: Mo-Fr 07:30-18:00; Sa 07:30-17:00
+website: https://www.sullivantire.com/locations/scarborough-me
