--- a/data/cities/scarborough/land-rover-scarborough.yml
+++ b/data/cities/scarborough/land-rover-scarborough.yml
@@ -7,5 +7,5 @@ city: Scarborough
 street: Route 1
 housenumber: "371"
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: Mo-Th 09:00-19:00; Fr 09:00-18:00; Sa 09:00-17:00
+website: https://www.landroverme.com
