update content and data

--- a/data/cities/gardiner/emerys-meat-and-produce.yml
+++ b/data/cities/gardiner/emerys-meat-and-produce.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: Bridge Street
 housenumber: "35"
-phone: 207 621 62328
+phone: +1-207-621-6328
 opening_hours: ""
 website: https://www.emerysmeatandproduce.com/
