--- a/data/cities/manchester/longfellows-greenhouses.yml
+++ b/data/cities/manchester/longfellows-greenhouses.yml
@@ -6,6 +6,6 @@ postcode: "04351"
 city: Manchester
 street: Puddledock Road
 housenumber: "81"
-phone: ""
-opening_hours: ""
+phone: +1-207-622-5965
+opening_hours: Mo-Su 08:00-17:00
 website: ""
