--- a/data/cities/auburn/dollar-tree-union-street.yml
+++ b/data/cities/auburn/dollar-tree-union-street.yml
@@ -7,5 +7,5 @@ city: Auburn
 street: Union Street
 housenumber: "61"
 phone: +1-207-753-0506
-opening_hours: ""
+opening_hours: Mo-Sa 08:00-22:00; Su 09:00-21:00
 website: ""
