--- a/data/cities/auburn/staples.yml
+++ b/data/cities/auburn/staples.yml
@@ -7,5 +7,5 @@ city: Auburn
 street: Union Street
 housenumber: "88"
 phone: +1-207-782-1119
-opening_hours: ""
+opening_hours: Mo-Fr 08:00-20:00; Sa 09:00-18:00; Su 11:00-18:00
 website: ""
