--- a/data/cities/falmouth/generator-supercenter-of-maine.yml
+++ b/data/cities/falmouth/generator-supercenter-of-maine.yml
@@ -6,6 +6,6 @@ postcode: "04105"
 city: Falmouth
 street: Route 1
 housenumber: "269"
-phone: 207 400 6277
+phone: +1-207-400-6277
 opening_hours: Mo-Fr 09:00-17:00
 website: https://www.generatorsupercenterofmaine.com
