update content and data

--- a/data/cities/ellsworth/2nd-to-none.yml
+++ b/data/cities/ellsworth/2nd-to-none.yml
@@ -1,11 +1,11 @@
-id: 238405077
+id: 13393805966
 type: node
-latitude: 44.54162
-longitude: -68.42401
-postcode: ""
+latitude: 44.54187
+longitude: -68.4234
+postcode: "04605"
 city: Ellsworth
 street: Main Street
-housenumber: "112"
-phone: +1-207-667-1129
+housenumber: "142"
+phone: +1 207-412-0018
 opening_hours: ""
 website: https://www.facebook.com/pages/2nd-to-None/315927065099827
