--- a/data/cities/ellsworth/john-edwards-market.yml
+++ b/data/cities/ellsworth/john-edwards-market.yml
@@ -1,11 +1,11 @@
 id: 215937878
 type: node
-latitude: 44.54203
-longitude: -68.42291
+latitude: 44.54204
+longitude: -68.42292
 postcode: "04605"
 city: Ellsworth
 street: Main Street
 housenumber: "158"
-phone: +1-207-667-9377
-opening_hours: Mo-Th 9:00-17:30; Fr 9:00-20:00; Sa 9:00-17:30; Su 10:00-17:00
-website: https://johnedwardsmarket.com/site/
+phone: +1 207-667-9377
+opening_hours: Mo-Th 09:00-17:30; Fr 09:00-20:00; Sa 09:00-17:30; Su 10:00-17:00
+website: https://www.johnedwardsmarket.com
