--- a/data/cities/ellsworth/the-bud-connection.yml
+++ b/data/cities/ellsworth/the-bud-connection.yml
@@ -1,11 +1,11 @@
-id: 238405065
+id: 7231557780
 type: node
-latitude: 44.54137
-longitude: -68.42411
-postcode: ""
+latitude: 44.54131
+longitude: -68.42427
+postcode: "04605"
 city: Ellsworth
 street: Main Street
 housenumber: "89"
-phone: +1-207-667-9595
+phone: +1 207-667-9595
 opening_hours: ""
 website: https://www.thebudconnection.com/
