--- a/data/cities/gardiner/accelerate-wellness.yml
+++ b/data/cities/gardiner/accelerate-wellness.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: Water Street
 housenumber: "469"
-phone: (207) 441-8282
+phone: +1-207-441-8282
 opening_hours: ""
 website: ""
