--- a/data/cities/gardiner/harveys-hardware.yml
+++ b/data/cities/gardiner/harveys-hardware.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: Maine Avenue
 housenumber: "16"
-phone: 207 582 5560
+phone: +1-207-582-5560
 opening_hours: Mo-Su 08:00-17:00
 website: ""
