--- a/data/cities/gardiner/the-hair-lab.yml
+++ b/data/cities/gardiner/the-hair-lab.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: Water Street
 housenumber: "469"
-phone: 207 588 7697
+phone: +1-207-588-7697
 opening_hours: Mo-Su 09:00-17:00
 website: ""
