--- a/data/cities/gardiner/tiger-town-beverage.yml
+++ b/data/cities/gardiner/tiger-town-beverage.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: Maine Avenue
 housenumber: "20"
-phone: 207 582 5805
+phone: +1-207-582-5805
 opening_hours: ""
 website: ""
