--- a/data/cities/gardiner/top-side-garming.yml
+++ b/data/cities/gardiner/top-side-garming.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: Water Street
 housenumber: "307"
-phone: (207) 588-7587
+phone: +1-207-588-7587
 opening_hours: Mo-Su 10:00-21:00
 website: ""
