--- a/data/cities/ellsworth/pyramid-studios-jewelers.yml
+++ b/data/cities/ellsworth/pyramid-studios-jewelers.yml
@@ -1,11 +1,11 @@
-id: 238413438
+id: 13393943786
 type: node
-latitude: 44.54135
-longitude: -68.42542
+latitude: 44.54141
+longitude: -68.42527
 postcode: "04605"
 city: Ellsworth
 street: State Street
 housenumber: "10"
-phone: +1-207-667-3321
-opening_hours: We-Fr 10:00-17:30; Sa 10:00-16:00
-website: http://www.pyramid.ws/
+phone: +1 207-667-3321
+opening_hours: Th-Fr 10:00-17:00; Sa 10:00-16:00; Su-We off
+website: https://www.pyramid.gold
