--- a/data/cities/ellsworth/union-river-book-and-toy-co.yml
+++ b/data/cities/ellsworth/union-river-book-and-toy-co.yml
@@ -1,11 +1,11 @@
-id: 238405076
+id: 7231557216
 type: node
 latitude: 44.54156
-longitude: -68.42416
-postcode: ""
+longitude: -68.42425
+postcode: "04605"
 city: Ellsworth
 street: Main Street
 housenumber: "100"
-phone: +1-207-664-3000
+phone: +1 207-664-3000
 opening_hours: Mo-Sa 09:30-17:30; Su 11:00-16:00
-website: http://www.unionrivertoys.com/
+website: https://www.unionrivertoys.com
