--- a/data/cities/gardiner/family-dollar.yml
+++ b/data/cities/gardiner/family-dollar.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: Water Street
 housenumber: "415"
-phone: 775 375 1143
+phone: +1-775-375-1143
 opening_hours: Mo-Su 08:00-22:00
 website: ""
