--- a/data/cities/bangor/family-dollar.yml
+++ b/data/cities/bangor/family-dollar.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: State Street
 housenumber: "89"
-phone: ""
-opening_hours: ""
+phone: +1-207-401-5147
+opening_hours: Mo-Su 08:00-21:00
 website: ""
