update content and data

--- a/data/cities/brunswick/berries-hearing-and-optical-center.yml
+++ b/data/cities/brunswick/berries-hearing-and-optical-center.yml
@@ -7,5 +7,5 @@ city: Brunswick
 street: Maine Street
 housenumber: "86"
 phone: +1-207-725-5111
-opening_hours: ""
-website: ""
+opening_hours: Mo–Th 8:00–16:30; Fr 8:00–14:00; Sa-Su off
+website: https://www.berrieshearing.com/
