--- a/data/cities/brunswick/frost-gully-violins.yml
+++ b/data/cities/brunswick/frost-gully-violins.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Mill Street
 housenumber: "15"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-373-1842
+opening_hours: Tu-Fr 10:00-17:00; Sa, Mo "By appointment only"; Su off
+website: https://frostgullyviolins.com/
