--- a/data/cities/brunswick/woods-waters-gear-exchange.yml
+++ b/data/cities/brunswick/woods-waters-gear-exchange.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Pleasant Street
 housenumber: "12"
-phone: ""
+phone: +1-207-844-8353
 opening_hours: Tu-Fr 10:30-17:30; Sa 10:30-17:00
-website: ""
+website: https://www.wwgearexchange.com/
