update content and data

--- a/data/cities/caribou/mikes-quik-stop-and-deli.yml
+++ b/data/cities/caribou/mikes-quik-stop-and-deli.yml
@@ -1,11 +1,11 @@
-id: 500179483
+id: 500177204
 type: node
-latitude: 46.79848
-longitude: -67.99255
+latitude: 46.81125
+longitude: -67.99683
 postcode: "04736"
 city: Caribou
 street: Presque Isle Road
-housenumber: "1101"
-phone: +1-207-328-4600
+housenumber: "907"
+phone: ""
 opening_hours: ""
 website: ""
