--- a/data/cities/caribou/hilltop-motors.yml
+++ b/data/cities/caribou/hilltop-motors.yml
@@ -6,6 +6,6 @@ postcode: "04736"
 city: Caribou
 street: Presque Isle Road
 housenumber: "1182"
-phone: ""
+phone: +1-207-747-1214
 opening_hours: ""
-website: ""
+website: https://www.hilltopmotorsinc.com/
