--- a/data/cities/madawaska/richardson-remedies.yml
+++ b/data/cities/madawaska/richardson-remedies.yml
@@ -6,6 +6,6 @@ postcode: "04756"
 city: Madawaska
 street: Main Street
 housenumber: "336"
-phone: +1-207-728-9379
-opening_hours: ""
+phone: +1-207-728-9198
+opening_hours: Mo-Su 08:00-21:00
 website: ""
